--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ The extension only interacts with Canvas LMS content that the user can access in
 All data is processed locally on the user’s device. No user data is shared with third parties.
 </p>
 <p>
-For questions, contact: <a href="mailto:youremail@example.com">youremail@example.com</a>
+For questions, contact: <a href="srujan.pendurthi@gmail.com">youremail@example.com</a>
 </p>
 </body>
 </html>
